--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ uvicorn = {extras = ["standard"], version = "^0.30.6"}
 python-multipart = "^0.0.10"
 jinja2 = "^3.1.4"
 sqlalchemy = "^2.0.35"
+pytest = "^8.3.3"
+aiosqlite = "^0.20.0"
+httpx = "^0.27.2"
+greenlet = "^3.1.1"
 
 
 [build-system]
